<resources>
    <string name="widget_settings_color_select_title">Farbe wählen</string>
    <string name="widget_settings_font_color_select_title">Schriftfarbe wählen</string>
    <string name="widget_settings_color_select_from_wallpaper">aus Deinem Wallpaper</string>
    <string name="widget_settings_color_select_modify">Farbe modifizieren</string>
    <string name="widget_settings_layout_title">Darstellung anpassen</string>
    <string name="widget_settings_show_hours">Stunden anzeigen</string>
    <string name="widget_settings_show_hours_hint">Wenn es weniger als 24 Stunden bis zum Stoppelmarkt dauert, wird automatisch auf Stunden gewechselt.</string>
    <string name="widget_settings_font_select_title">Schriftart wählen</string>
    <string name="widget_settings_font_select_roboto">Roboto</string>
    <string name="widget_settings_font_select_roboto_slab">Roboto Slab</string>
    <string name="widget_settings_font_select_damion">Damion</string>
    <string name="widget_settings_action_select_map">Karte öffnen</string>
    <string name="widget_settings_action_select_title">Aktion beim Klicken wählen</string>
    <string name="widget_settings_action_select_bus">Busfahrplan öffnen</string>
    <string name="widget_settings_action_select_edit_widget">Widget bearbeiten</string>
    <string name="widget_settings_action_select_none">Nichts tun</string>
    <string name="widget_settings_hour_title">Darstellung anpassen</string>
    <string name="widget_settings_hour_option_toggle">Stunden anzeigen</string>
    <string name="widget_settings_hour_description">Wenn es weniger als 24 Stunden bis zum Stoppelmarkt dauert, wird automatisch auf Stunden gewechselt.</string>
    <string name="widget_settings_color_custom_dialog_title">Farbe eingeben</string>
    <string name="widget_settings_color_custom_dialog_accept">Übernehmen</string>
    <string name="widget_settings_color_custom_dialog_cancel">Abbrechen</string>
</resources>
