<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/color_settings_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="8dp"
        app:cardBackgroundColor="?colorSurface"
        app:cardCornerRadius="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_settings_layout_title" />

                <CheckBox
                    android:id="@+id/toggle_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/widget_settings_show_hours" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:text="@string/widget_settings_show_hours_hint"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/widget_settings_font_select_title" />

                <RadioGroup
                    android:id="@+id/font_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/font_roboto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_settings_font_select_roboto"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/font_roboto_slab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_settings_font_select_roboto_slab"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/font_damion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_settings_font_select_damion"
                        android:textSize="22sp" />
                </RadioGroup>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>