<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/color_settings_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="8dp"
        app:cardBackgroundColor="?colorSurface"
        app:cardCornerRadius="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_settings_action_select_title" />

                <RadioGroup
                    android:id="@+id/action_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/action_open_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_settings_action_select_map"
                        android:textSize="18sp" />

                    <!--<RadioButton
                        android:id="@+id/action_open_bus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_settings_action_select_bus"
                        android:textSize="18sp"/>-->

                    <RadioButton
                        android:id="@+id/action_edit_widget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_settings_action_select_edit_widget"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/action_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_settings_action_select_none"
                        android:textSize="18sp" />

                </RadioGroup>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>