<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/color_settings_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_settings_color_select_title"/>

                <LinearLayout
                    android:id="@+id/widget_color_selection_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <TextView
                    android:id="@+id/from_wallpaper_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/widget_settings_color_select_from_wallpaper"
                    android:textSize="12sp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <LinearLayout
                        android:id="@+id/from_wallpaper_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/color_secection_dominant"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_margin="4dp"
                            app:cardBackgroundColor="#7d56c2"/>

                        <android.support.v7.widget.CardView
                            android:id="@+id/color_secection_vibrant"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_margin="4dp"
                            app:cardBackgroundColor="?colorPrimary"/>

                        <android.support.v7.widget.CardView
                            android:id="@+id/color_secection_muted"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_margin="4dp"
                            app:cardBackgroundColor="#2196f3"/>

                    </LinearLayout>

                    <android.support.v7.widget.CardView
                        android:id="@+id/hex_input"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="#444444">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="#"
                            android:textColor="#f4f4f4"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/widget_settings_color_select_modify"
                    android:textSize="12sp"/>

                <com.jonasgerdes.stoppelmap.widget.colorpicker.ColorPicker
                    android:id="@+id/color_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical">

                    <com.jonasgerdes.stoppelmap.widget.colorpicker.HueSlider
                        android:id="@+id/slider_hue"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="4dp"/>

                    <com.jonasgerdes.stoppelmap.widget.colorpicker.SaturationSlider
                        android:id="@+id/slider_saturation"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="4dp"/>

                    <com.jonasgerdes.stoppelmap.widget.colorpicker.LightnessSlider
                        android:id="@+id/slider_lightness"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="4dp"/>
                </com.jonasgerdes.stoppelmap.widget.colorpicker.ColorPicker>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</FrameLayout>